# Projet-C-Election-Municipale

./: Gestion Election  election.c  election.h  election_main.c  gestion réclamation  gestion utlisateur  main.c  project1.gestion-des-elections.glade.bak.bak.bak  projet.c  projet.h
project2 (3rd copy)/: Makefile  Makefile.in  config.status  configure.in  election_municipale.glade  election_municipale.glade.bak  election_municipale.gladep.bak
project2 (3rd copy)/autom4te.cache/: output.0  requests
project2 (3rd copy)/po/: Makefile  Makefile.in
project2 (3rd copy)/src/: Makefile  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c
project2 (copy)/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  election_municipale.glade  election_municipale.glade.bak
project2 (copy)/autom4te.cache/: requests  traces.0  traces.1
project2 (copy)/src/: Makefile  Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h.bak  main.c
